# rust-p2w

./: .gitignore  CLASSES_DESIGN.md  Cargo.toml  DEBUGGER_ARCHITECTURE.md  GRAMMAR_ARCHITECTURE.md  J2W.md  LICENSE  MEMORY_MANAGEMENT.md  NOTICE  PICO_BACKEND.md  RC_PASS_TODO.md  README.md  VALUE_MODEL.md  VEX_BACKEND.md
.github/workflows/: ci.yml
device/: boot.c  rp2350.ld
docs/: COMPILER_FRONTIER.md  INTERACTIVE_WEB.md  PITCH.md  PYTHON_COMPAT.md  REUSE_PLAN.md  RICH_OUTPUT.md  TASKS.md
examples/: demo.rs  emit_component.rs  emit_ll.rs  sizes.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: ast.rs  blockly.rs  builtins.rs  codegen.rs  component.rs  debug.rs  emit.rs  error.rs  evidence.rs  floatfmt.rs  hoist.rs  lexer.rs  lib.rs  lint.rs  llvm.rs  parser.rs  reuse.rs
tests/: exec.rs
tools/: component_all.sh  component_events.sh  component_grid.sh  component_listret.sh  component_return.sh  componentize.sh  fuzz_native.sh  gen_program.py  native_run.sh  pico_build.sh  reuse_bench.sh  wasm_poc.sh
