[package]
name = "rust-p2w"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust reimplementation of the p2w Python-subset to WebAssembly (WAT) compiler"

[dependencies]

[dev-dependencies]
wasmtime = { version = "44.0.2", default-features = false, features = ["cranelift", "gc", "gc-null", "runtime"] }
wat = "1"

# Tests JIT-compile every program through Cranelift; an unoptimized Cranelift
# is 10-50x slower, dominating the suite. Optimize dependencies (one-time
# rebuild) while keeping this crate's own incremental builds fast.
[profile.dev.package."*"]
opt-level = 2
