[package]
name = "p2w-rt"
version = "0.1.0"
edition = "2024"
description = "Bare-metal runtime for the rust-p2w native (Pico) backend: the p2w_* ABI over tagged-i32 Python values."

[lib]
# `lib` for now (host unit tests); a `staticlib` build for the device links
# against the emitted LLVM IR in the toolchain phase.
crate-type = ["lib"]

[dependencies]
# Pure-Rust no_std math (trunc/round/pow) for float formatting and `**`.
# Works on the host *and* the bare-metal device (no C libm linkage needed).
libm = "0.2"
# Shortest round-tripping float digits (round-half-to-even, like CPython's
# dtoa). no_std; we re-lay-out its digits into CPython's exact repr.
ryu = { version = "1", default-features = false }
